syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "BaseNetworkTypes.proto";

option java_package = "me.jancasus.microscenery.network.v2";
option java_outer_classname = "MicroscopeSignals";
option java_multiple_files = true;

message MicroscopeSignal{
  oneof signal{
    MicroscopeStatus status = 1;
    Stack stack = 2;
    Slice slice = 3;
    HardwareDimensions hardwareDimensions = 10;
    AblationResults ablationResults = 11;
  }
}

message MicroscopeStatus{
  EnumServerState state = 1;
  Vector3Float stagePosition = 2;
  bool live = 3;
  bool ablationShutterOpen = 4;
}
enum EnumServerState{
  SERVER_STATE_UNKNOWN = 0;
  // takes images from camera at defined intervals, stage controls are open
  SERVER_STATE_LIVE = 1;
  // camera only snaps images on request, stage controls are open
  SERVER_STATE_MANUAL = 2;
  SERVER_STATE_SHUTTING_DOWN = 3;
  // full acquisition mode, stage and camera are controlled automatically
  SERVER_STATE_STACK = 4;
  SERVER_STATE_STARTUP = 5;
  SERVER_STATE_ABLATION = 6;
}

message HardwareDimensions{
  Vector3Float stageMin = 1;
  Vector3Float stageMax = 2;
  Vector2Int imageSize = 3;
  float vertexDiameter = 4;
  EnumNumericType numericType = 5;
}

message Stack{
  int32 id = 1;
  bool live = 2;
  Vector3Float from = 3;
  Vector3Float to = 4;
  int32 slicesCount = 5;
  google.protobuf.Timestamp created = 6;
}

message Slice{
  int32 id = 1;
  google.protobuf.Timestamp created = 2;
  Vector3Float stagePos = 3;
  int32 size = 4;
  int32 stackId = 5;
  int32 stackSliceIndex = 6;
}

message AblationResults{
  int32 totalTimeMillis = 1;
  repeated int32 perPointTime = 2;
}

enum EnumNumericType{
  VALUE_NUMERIC_UNKNOWN = 0;
  VALUE_NUMERIC_INT8 = 1;
  VALUE_NUMERIC_INT16 = 2;
}